--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>clinical-conference</artifactId>
 	<packaging>war</packaging>
 	<name>clinical-conference: Spring MVC + Web Flow + JSF/PrimeFaces</name>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<properties>
 	<!-- 
 		<org.springframework-version>3.0.5.RELEASE</org.springframework-version>
